# open-env-project

./: .dockerignore  .gitignore  Dockerfile  README.md  __init__.py  app.py  config.py  inference.py  openenv  openenv.yaml  openenv_validate.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
data/: department_rules.json  email_templates.json
env/: __init__.py  email_generator.py  environment.py  grader.py  models.py  tasks.py  utils.py
server/: __init__.py  app.py
