[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openenv-email-triage"
version = "1.0.0"
description = "A real-world email triage environment for AI agent training"
authors = [
    {name = "Swatimishra8", email = "swatimis0805@gmail.com"}
]
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
keywords = ["openenv", "email", "triage", "ai", "environment", "nlp", "classification"]

dependencies = [
    "fastapi>=0.115.6,<1",
    "uvicorn[standard]>=0.32.0,<1",
    "pydantic>=2.10.4,<3",
    "pydantic-settings>=2.6.0,<3",
    "openai>=1.68.0",
    "httpx>=0.28.0,<1",
    "python-dotenv>=1.0.1,<2",
    "pyyaml>=6.0.1,<7",
    "rich>=13.9.0,<15",
    "typer>=0.15.0,<1",
    "huggingface_hub>=0.20.0,<1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0,<9",
    "pytest-asyncio>=0.24.0,<1",
]

[project.urls]
Homepage = "https://huggingface.co/spaces/Swatimishra/open-env"
Repository = "https://github.com/Swatimishra8/openenv-project"
Documentation = "https://huggingface.co/spaces/Swatimishra/open-env"
"Bug Tracker" = "https://github.com/Swatimishra8/openenv-project/issues"

[project.scripts]
openenv-email-triage = "app:main"

[tool.setuptools]
packages = ["env"]

[tool.setuptools.package-data]
env = ["*.json", "*.yaml", "*.yml"]
"*" = ["data/*.json"]

[openenv]
# OpenEnv specific configuration
name = "email-triage-env"
version = "1.0.0"
entry_point = "app:app"
server_command = "uvicorn app:app --host 0.0.0.0 --port 7860"

[openenv.environment]
type = "text"
language = "python"
framework = "fastapi"

[openenv.deployment]
multi_mode = true
supports_docker = true
supports_python = true
min_python_version = "3.11"

[openenv.api]
reset_endpoint = "/reset"
step_endpoint = "/step"
state_endpoint = "/state"
health_endpoint = "/health"
tasks_endpoint = "/tasks"

[openenv.tasks]
task_classify = {difficulty = "easy", max_steps = 3, target_score = 0.8}
task_priority_routing = {difficulty = "medium", max_steps = 5, target_score = 0.7}
task_full_triage = {difficulty = "hard", max_steps = 8, target_score = 0.6}